final fix (hopefully) for html overflow

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -214,7 +214,6 @@ Landing Header
 	left: 0;
 	right: 0;
 	bottom: auto;
-	padding: 0;
 	z-index: 500;
 }
 
